# acv

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
acv/: Cargo.toml  build.rs
acv/.cargo/: config.toml
acv/src/: error.rs  frame_generator.rs  lib.rs  output.rs  pipeline.rs  util.rs
acv/src/frame_generator/: jni.rs
android/: Cargo.toml
android-logger/: Cargo.toml
android-logger/src/: lib.rs
android-sys/: Cargo.toml  build.rs  wrapper.h
android-sys/src/: bindings.rs
android/src/: api_level.rs  lib.rs  log.rs  native_activity.rs  native_window.rs
android/src/camera/: error.rs  mod.rs
bitarray/: Cargo.toml
camera/: Cargo.toml
camera/libuvc-rs/: Cargo.toml
camera/libuvc-rs/uvc-src/: Cargo.toml
camera/libuvc-rs/uvc-sys/: build.rs
camera/src/: lib.rs
opencv-rs/: Cargo.toml  build.rs
