[package]
name = "acv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camera = { path = "../camera", optional = true }
cv = "0.6"
image = "0.24"
imageproc = "0.23"
tokio = { version = "1.13", features = ["full"] }
robusta_jni = { version = "0.2", optional = true }

[features]
default = ["camera-jni"]
camera-jni = ["robusta_jni"]
camera-ndk = ["camera"]
